version 0.9.9.530
- fix some focus and focus-stealing problems
- improve the way the standard browser is found
- fix race condition in the GUI resulting in the same line sent twice
- Windows: update bundled Tor binary to version 0.2.1.30

version 0.9.9.515
- fix (regression): make notification window stay on top again
- fix wrong handling of new line characters in chat messages
- make main window always come to front when unhiding from tray

version 0.9.9.509
- fixed the focus stealing of the notification window on Windows
- made the notofication window less obtrusive, more native looking 
  and make it immediately disappear on mouse contact. 
- made the animation of the popup faster and look more natural.
- additional notification methods: knotify, gtknotify, growlnotify, xosd
- Mac OSX: more Mac conforming UI with menu bar
- Windows: use stable Tor-0.2.1.29 instead of experimental 0.2.2.20-alpha
- updated french translation
- remove annoying popup warning about debug log, we even allow logging of
  conversations now so this is only consequent.

version 0.9.9.458
- fixed crash that could happen while torchat was minimized to the tray

version 0.9.9.453
- fixed connection handshake: timeout for unanswered outgoing connections

version 0.9.9.449
- speed up the wiping of deleted files and not freeze the GUI while doing it

version 0.9.9.425
- (security) wipe temporary files and sent offline messages before deleting
- (security) properly sanitize incoming file names
- profile text and avatar (will be shown when mouse over buddy in list)
- enable the logging for individual buddies and show backlog in opened window
- make the splitter in the chat window movable
- remember and restore window sizes
- fix receiving of very small files (sometimes got stuck at 0%)
- fix the annoying "list item -1" error on windows once and for all (hopefully)
- allow sending files to offline buddies (will wait until connect, then send)